fix scroll bar on firefox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,7 +53,4 @@ app-profile {
     overflow: unset;
     margin: unset;
   }
-
-  scrollbar-color: rebeccapurple green;
-  scrollbar-width: thin;
 }
